NOTICE: Please see https://arkime.com/faq#upgrading-moloch for upgrading info

ES Versions:
  * Moloch >= 2.7.0  supports ES >= 7.4.0
  * Moloch >= 2.2.0  supports ES >= 6.8.0 or >= 7.1.0
  * Moloch >= 2.0.0  supports ES >= 6.7.0 or >= 7.1.0
  * Moloch >= 1.5.0  supports ES >= 5.5.0, 6.x, not 7.x or later
  * Moloch >= 1.0.0  supports ES >= 5.5.0, 6.x (not prod tested, only for new installs), not 7.x or later
  * Moloch >= 0.50.0 supports ES >= 5.5.0, not 6.x or later
  * Moloch >= 0.18.1 supports ES 2.4.x, >= 5.3.1 not 6.x or later

Node Versions:
  * Moloch >= 2.4.0 requires NodeJS 12.x
  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading

3.0.0 2021/01/xx
  - NOTICE - multiESNodes requires a name: attribute per entry
  - release - curl 7.74.0, node 12.20, glib 2.66.3, yara 4.0.2, lua 5.3.6, maxmind 1.4.3
  - capture - search for GeoIP files first in /var/lib/GeoIP
  - viewer - add POST version session query APIs to support long expressions
             old GET versions still work
  - viewer - reorganize and standardize some APIs
  - viewer - put npm scripts and common npm packages at top level
  - viewer - allow viewing of large encrypted pcap files (issue #1555)
  - viewer - can find nodes for pcap based on --host
  - viewer - in multiviewer mode can now select which clusters to search (PR #1325)
  - viewer - fix addTag/removeTag with multiviewer (PR #1556)
  - wise - new config UI, enable with --webconfig
  - wise - more moloch->arkime changes
  - esproxy - first version, see https://arkime.com/esproxy

2.7.1 2020/12/01
  - release - glib 2.66.2, curl 7.73.0, nghttp2 1.42.0
  - wise - fix UI queries hanging
  - viewer - fix anonymous user settings not saving
  - viewer - fix lastUsed time not always saving to ES